src/snapshots/lipe_find_parser__find_compilation__compile_permission_check_basic_any.snap
---
source: src/lib.rs
assertion_line: 220
expression: "parse_and_compile(\"-perm -244\").unwrap()"
---
(use-modules (lipe) (lipe find))

(let* ()
  (dynamic-wind
    (lambda () #t)
    (lambda () (lipe-scan
        "/"
        (lipe-getopt-client-mount-path)
        (lambda () (and (= (logand (mode) 164) 164) (print-relative-path)))
        (lipe-getopt-required-attrs)
        (lipe-getopt-thread-count)))
    (lambda () #t)))
