src/snapshots/lipe_find_parser__find_compilation__compile_permission_check_symbolic_at_least_user_plus.snap
---
source: src/lib.rs
assertion_line: 235
expression: "parse_and_compile(\"-perm /u+w\").unwrap()"
---
(use-modules (lipe) (lipe find))

(let* ()
  (dynamic-wind
    (lambda () #t)
    (lambda () (lipe-scan
        "/"
        (lipe-getopt-client-mount-path)
        (lambda () (and (not (= (logand (mode) 128) 0)) (print-relative-path)))
        (lipe-getopt-required-attrs)
        (lipe-getopt-thread-count)))
    (lambda () #t)))
