src/snapshots/lipe_find_parser__find_compilation__fprintf.snap
---
source: src/lib.rs
assertion_line: 297
expression: "parse_and_compile(\"-fprintf user_files.txt \\\"%p,%U,%{fid}\\\\n\\\"\")"
---
(use-modules (lipe) (lipe find) (ice-9 threads))

(let* ((%lf3:port:0 (current-output-port))
       (%lf3:mutex:1 (make-mutex))
       (%lf3:frame:2 (lambda (s d) (with-mutex %lf3:mutex:1 (display s %lf3:port:0) (display (string #\x1e d) %lf3:port:0))))
       (%lf3:print:2 (lambda (line) (%lf3:frame:2 line #\x02))))
  (dynamic-wind
    (lambda () #t)
    (lambda () (lipe-scan
        "/"
        (lipe-getopt-client-mount-path)
        (lambda () (%lf3:print:2 (format #f "~a,~d,~a\n" (absolute-path) (uid) (file-fid))))
        (lipe-getopt-required-attrs)
        (lipe-getopt-thread-count)))
    (lambda () #t)))
